--- a/Model/Model.csproj
+++ b/Model/Model.csproj
@@ -75,6 +75,7 @@
     <Compile Include="Entidades\Usuarios.cs" />
     <Compile Include="Entidades\Venda.cs" />
     <Compile Include="Entidades\VendaComComandaAtiva.cs" />
+    <Compile Include="Entidades\VendaComComandaAtivaViewModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\Settings.Designer.cs">
       <AutoGen>True</AutoGen>
