Corrigindo bugs, Refatorando e Melhorando Parte IV

--- a/View/View.csproj
+++ b/View/View.csproj
@@ -76,6 +76,7 @@
   <ItemGroup>
     <Compile Include="Enum\EnumComanda.cs" />
     <Compile Include="Enum\EnumMovimentacao.cs" />
+    <Compile Include="Enum\EnumTipoCadastro.cs" />
     <Compile Include="Enum\EnumTipoCreditar.cs" />
     <Compile Include="Enum\EnumTipoOperacao.cs" />
     <Compile Include="Enum\EnumTipoOperacaoCaixa.cs" />
