--- a/Controller/Controller.csproj
+++ b/Controller/Controller.csproj
@@ -53,6 +53,7 @@
   <ItemGroup>
     <Compile Include="Enum\EnumTipoPagamento.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Repositorio\AnomaliasRepositorio.cs" />
     <Compile Include="Repositorio\CaixaRepositorio.cs" />
     <Compile Include="Repositorio\CategoriaRepositorio.cs" />
     <Compile Include="Repositorio\ClienteRepositorio.cs" />
