--- a/View/View.csproj
+++ b/View/View.csproj
@@ -82,6 +82,12 @@
     <Compile Include="Enum\EnumTipoOperacaoCaixa.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="UI\ViewAnomalias\frmCriarAnomalias.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="UI\ViewAnomalias\frmCriarAnomalias.Designer.cs">
+      <DependentUpon>frmCriarAnomalias.cs</DependentUpon>
+    </Compile>
     <Compile Include="UI\ViewCaixa\frmAdicionarCaixa.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -248,6 +254,9 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
+    <EmbeddedResource Include="UI\ViewAnomalias\frmCriarAnomalias.resx">
+      <DependentUpon>frmCriarAnomalias.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="UI\ViewCaixa\frmAdicionarCaixa.resx">
       <DependentUpon>frmAdicionarCaixa.cs</DependentUpon>
     </EmbeddedResource>
