--- a/Model/Model.csproj
+++ b/Model/Model.csproj
@@ -59,6 +59,7 @@
     <Compile Include="BO\UsuariosBO.cs" />
     <Compile Include="Data\_DbContext.cs" />
     <Compile Include="Entidades\Anomalias.cs" />
+    <Compile Include="Entidades\AnomaliasViewModel.cs" />
     <Compile Include="Entidades\Caixa.cs" />
     <Compile Include="Entidades\Categoria.cs" />
     <Compile Include="Entidades\Cliente.cs" />
