--- a/View/View.csproj
+++ b/View/View.csproj
@@ -82,6 +82,12 @@
     <Compile Include="Enum\EnumTipoOperacaoCaixa.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="UI\ViewAnomalias\frmAnomalias.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="UI\ViewAnomalias\frmAnomalias.Designer.cs">
+      <DependentUpon>frmAnomalias.cs</DependentUpon>
+    </Compile>
     <Compile Include="UI\ViewAnomalias\frmCriarAnomalias.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -238,12 +244,6 @@
     <Compile Include="UI\ViewProduto\frmPesquisarProduto.Designer.cs">
       <DependentUpon>frmPesquisarProduto.cs</DependentUpon>
     </Compile>
-    <Compile Include="UI\ViewRelatorio\frmRelatorio.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="UI\ViewRelatorio\frmRelatorio.Designer.cs">
-      <DependentUpon>frmRelatorio.cs</DependentUpon>
-    </Compile>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
@@ -254,6 +254,9 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
+    <EmbeddedResource Include="UI\ViewAnomalias\frmAnomalias.resx">
+      <DependentUpon>frmAnomalias.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="UI\ViewAnomalias\frmCriarAnomalias.resx">
       <DependentUpon>frmCriarAnomalias.cs</DependentUpon>
     </EmbeddedResource>
@@ -332,9 +335,6 @@
     <EmbeddedResource Include="UI\ViewProduto\frmPesquisarProduto.resx">
       <DependentUpon>frmPesquisarProduto.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="UI\ViewRelatorio\frmRelatorio.resx">
-      <DependentUpon>frmRelatorio.cs</DependentUpon>
-    </EmbeddedResource>
     <EmbeddedResource Include="UI\ViewRelatorio\rpvCompras.rdlc" />
     <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
@@ -361,6 +361,7 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Source\Imagem\Anomalias\search.png" />
     <Content Include="Source\Imagem\Caixa\fecharcaixa.png" />
     <Content Include="Source\Imagem\Caixa\1417909102_bar-code.png" />
     <Content Include="Source\Imagem\Caixa\1435174906_barcode.ico" />
@@ -374,12 +375,15 @@
     <Content Include="Source\Imagem\Estoque\1438284258_loading.png" />
     <Content Include="Source\Imagem\Estoque\codigodebarras.ico" />
     <Content Include="Source\Imagem\Estoque\lapis.ico" />
+    <Content Include="Source\Imagem\Global\19-0.gif" />
     <Content Include="Source\Imagem\Global\Crud\save.ico" />
     <Content Include="Source\Imagem\Global\Crud\update.ico" />
     <Content Include="Source\Imagem\Global\Crud\delete.ico" />
     <Content Include="Source\Imagem\Global\Crud\exit.ico" />
     <Content Include="Source\Imagem\Global\Crud\new.ico" />
     <Content Include="Source\Imagem\Global\aguarde.ico" />
+    <Content Include="Source\Imagem\Global\loading.gif" />
+    <Content Include="Source\Imagem\Global\Running snake.gif" />
     <Content Include="Source\Imagem\Menu\1434757321_login.ico" />
     <Content Include="Source\Imagem\Menu\1434757361_User.ico" />
     <Content Include="Source\Imagem\Menu\1434757402_bar-code.ico" />
