--- a/Model/Model.csproj
+++ b/Model/Model.csproj
@@ -54,6 +54,7 @@
     <Compile Include="BO\ClienteBO.cs" />
     <Compile Include="BO\ComandaBO.cs" />
     <Compile Include="BO\GerenciarGerenciamentoDeEstoque.cs" />
+    <Compile Include="BO\Inject.cs" />
     <Compile Include="BO\KeyGenBO.cs" />
     <Compile Include="BO\ProdutoBO.cs" />
     <Compile Include="BO\UsuariosBO.cs" />
@@ -72,6 +73,7 @@
     <Compile Include="Entidades\MovimentacaoProduto.cs" />
     <Compile Include="Entidades\Permissao.cs" />
     <Compile Include="Entidades\Produto.cs" />
+    <Compile Include="Entidades\RelatorioComprasViewModel.cs" />
     <Compile Include="Entidades\TipoCadastro.cs" />
     <Compile Include="Entidades\TipoPagamento.cs" />
     <Compile Include="Entidades\Usuarios.cs" />
