--- a/Model/Model.csproj
+++ b/Model/Model.csproj
@@ -75,6 +75,7 @@
     <Compile Include="Entidades\Permissao.cs" />
     <Compile Include="Entidades\Produto.cs" />
     <Compile Include="Entidades\RelatorioComprasViewModel.cs" />
+    <Compile Include="Entidades\RelatorioEstoqueConferenciaViewModel.cs" />
     <Compile Include="Entidades\TipoCadastro.cs" />
     <Compile Include="Entidades\TipoPagamento.cs" />
     <Compile Include="Entidades\Usuarios.cs" />
