--- a/Controller/Controller.csproj
+++ b/Controller/Controller.csproj
@@ -67,6 +67,7 @@
     <Compile Include="Repositorio\PermissaoRepositorio.cs" />
     <Compile Include="Repositorio\ProdutoRepositorio.cs" />
     <Compile Include="Repositorio\RelatorioCompraRepositorio.cs" />
+    <Compile Include="Repositorio\RelatorioFiadoRepositorio.cs" />
     <Compile Include="Repositorio\TipoCadastroRepositorio.cs" />
     <Compile Include="Repositorio\TipoPagamentoRepositorio.cs" />
     <Compile Include="Repositorio\UsuarioRepositorio.cs" />
