--- a/Model/Model.csproj
+++ b/Model/Model.csproj
@@ -76,6 +76,7 @@
     <Compile Include="Entidades\Produto.cs" />
     <Compile Include="Entidades\RelatorioComprasViewModel.cs" />
     <Compile Include="Entidades\RelatorioEstoqueConferenciaViewModel.cs" />
+    <Compile Include="Entidades\RelatorioFiadoViewModel.cs" />
     <Compile Include="Entidades\TipoCadastro.cs" />
     <Compile Include="Entidades\TipoPagamento.cs" />
     <Compile Include="Entidades\Usuarios.cs" />
