--- a/View/View.csproj
+++ b/View/View.csproj
@@ -374,6 +374,7 @@
     <None Include="app.manifest">
       <SubType>Designer</SubType>
     </None>
+    <Compile Include="Enum\EnumSangria.cs" />
     <None Include="packages.config">
       <SubType>Designer</SubType>
     </None>
